# bayesopt

./: CMakeLists.txt
examples/: CMakeLists.txt  bo_branin_timed.cpp  bo_camelback.cpp  bo_compare.cpp  bo_cont.cpp  bo_disc.cpp  bo_hartmann.cpp  branin_system_calls.cpp  branin_xml.cpp
include/: bopt_state.hpp  conditionalbayesprocess.hpp  dataset.hpp  gaussian_process.hpp  gaussian_process_hierarchical.hpp  gaussian_process_ml.hpp  gaussian_process_normal.hpp  inneroptimization.hpp  kernel_functors.hpp  kernelregressor.hpp  mean_functors.hpp  nonparametricprocess.hpp  posterior_empirical.hpp  posterior_fixed.hpp  posterior_mcmc.hpp  posteriormodel.hpp  student_t_process_jef.hpp  student_t_process_nig.hpp
include/bayesopt/: bayesopt.hpp  bayesoptbase.hpp  parameters.hpp
nlopt2/: CMakeLists.txt  config.cmake.h.in
nlopt2/util/: timer.c
src/: bayesoptbase.cpp  bayesoptcont.cpp  bayesoptdisc.cpp  bopt_state.cpp  conditionalbayesprocess.cpp  dataset.cpp  gaussian_process.cpp  gaussian_process_hierarchical.cpp  gaussian_process_ml.cpp  gaussian_process_normal.cpp  inneroptimization.cpp  kernel_functors.cpp  kernelregressor.cpp  mean_functors.cpp  nonparametricprocess.cpp  parameters.cpp  posterior_empirical.cpp  posterior_fixed.cpp  posterior_mcmc.cpp  posteriormodel.cpp  student_t_process_jef.cpp  student_t_process_nig.cpp
src/wrappers/: bayesoptwpr.cpp
utils/: boundingbox.hpp  log.hpp  param_loader.cpp  param_loader.hpp  testfunctions.hpp
